compiler/tests/success/test_for.jazz
export
fn f() -> reg u64 {
reg u64 r;
inline int i;
r = 0;
for i = 3 downto 0 {
r += 1;
}
return r;
}
