compiler/tests/fail/unroll/x86-64/bug_29.jazz
export fn main (reg u64 io) -> reg u64 {
  inline int i;
  reg u64 res;
  for i = 0 to (int)io {
    res = i;
  }
  return res;
}

